Addresses issue #29: Home page why fusion item h3 headers are too large for smaller devices resulting in text breaking arbitrarily

--- a/src/css/fusion.css
+++ b/src/css/fusion.css
@@ -428,6 +428,7 @@ nav a {
     color: var(--primary);
     padding-bottom: 1rem;
     text-align: center;
+    font-size: 2.3rem;
 }
 
 .why-fusion p {
